# AlphaHmm

./: .gitignore  .gitmodules  AlphaHmmSpec.txt  CMakeLists.txt
TestData/: Sequence.txt
src/: AlphaHmmInMod.f90  CMakeLists.txt  ExternalHMMWrappers.f90  HMMInputOutputModule.f90  hmm.f90  hmm.f90.bak  hmmHaplotype.f90  hmmHeader.f90  hmmInputMod.f90  hmmOutputMod.f90  hmmvariables.f90  main.f90  utils.f90
